# SCPI-Control-Interface-VST-for-HP3312a

./: .gitignore  CMakeLists.txt
Documentations/: doc.txt
Source/: ARBManager.cpp  ARBManager.h  HP33120ADriver.cpp  HP33120ADriver.h  LFOEngine.cpp  LFOEngine.h  LFOManager.cpp  LFOManager.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VimLookAndFeel.h
